# douyiun-to-obsidion

./: .env.example  .gitignore  config.example.yaml  config.yaml  pyproject.toml
docs/.claude/: settings.local.json
docs/claude/: AUDIT.md  DECISIONS.md  GLM_REVIEW.md
docs/codex/: CLAUDE_REVIEW.md  EXECUTION.md  PRD.md  WEB_RESEARCH_2026-06-19.md
docs/glm_ref/: 抖音视频知识归档系统_PRD.docx  抖音视频知识归档系统_执行手册.docx
docs/m1/: E2E_TEST_GUIDE.md  ENV_VERIFY.md  RUNBOOK.md  douyin_agent_template.json  openclaw_douyin_additions.json
docs/m2/: KNOWLEDGE.md
git_ref/: COMMUNITY_RESOURCES_AUDIT.md
scripts/: git-backup.ps1  manual_e2e_test.ps1
src/asr/: __init__.py  audio_preprocess.py  local_whisper.py  mimo_client.py
src/bridge/: main.py  mcp_server.py
src/extractors/: __init__.py  audio_extractor.py  batch_url.py  bilibili_extractor.py  douk_fallback.py  douyin_extractor.py  douyin_resolver.py  downloader.py  metadata.py  platform.py  xiaohongshu_extractor.py  youtube_extractor.py
src/llm/: __init__.py  client.py  mimo_summarizer.py
src/obsidian/: frontmatter.py  note_builder.py  path_calc.py  writer.py
src/pipeline/: errors.py  scheduler.py  state_machine.py
src/queue/: db.py
src/utils/: cookie_probe.py  git_backup.py  logging_config.py  monitor.py  sleep_wake.py
src/vision/: __init__.py  heuristic_router.py  keyframe_extractor.py  ocr_client.py  semantic_frame_selector.py  vlm_client.py
tasks/: lessons.md  todo.md
tests/: conftest.py  test_scaffold.py
tests/asr/: test_asr_interface.py  test_audio_preprocess.py  test_local_whisper.py  test_mimo_client.py
(+129 files in other folders)
